--- a/install-vapp/task-restarting-the-unified-manager-virtual-machine.adoc
+++ b/install-vapp/task-restarting-the-unified-manager-virtual-machine.adoc
@@ -27,4 +27,4 @@ You can also restart the virtual machine from vSphere by using the VMware *Resta
 
 *Related information*
 
-https://www.vmware.com/support/developer/PowerCLI/PowerCLI41/html/Restart-VMGuest.html[VMware vSphere PowerCLI Cmdlets Reference: Restart-VMGuest]
+https://www.vmware.com/support/developer/PowerCLI/PowerCLI41/html/Restart-VMGuest.html[VMware vSphere PowerCLI Cmdlets Reference: Restart-VMGuest^]
