Cleaned topics in install-windows

--- a/install-windows/task-restarting-unified-manager-win.adoc
+++ b/install-windows/task-restarting-unified-manager-win.adoc
@@ -20,6 +20,7 @@ You must have Windows administrator privileges.
 . Log in to Windows using the default local administrator account.
 . Stop the Unified Manager services:
 +
+[options="header"]
 |===
 | From the...| Stop the services in following order...
 a|
