--- a/install-linux/reference-protocol-and-port-requirements.adoc
+++ b/install-linux/reference-protocol-and-port-requirements.adoc
@@ -80,10 +80,10 @@ Used to access realtime REST API-based EMS events from authenticated ONTAP syste
 
 [NOTE]
 ====
-The ports used for HTTP and HTTPS communication (ports 80 and 443) can be changed using the Unified Manager maintenance console. For more information, see the _Configuring Active IQ Unified Manager_.
+The ports used for HTTP and HTTPS communication (ports 80 and 443) can be changed using the Unified Manager maintenance console. For more information, see  _Configuring Active IQ Unified Manager_.
 ====
 
-xref:/config/concept-configuring-unified-manager.adoc[Configuring Active IQ Unified Manager]
+link:../config/concept-configuring-unified-manager.html[Configuring Active IQ Unified Manager]
 
 == Connections from the Unified Manager server
 
