--- a/install-linux/task-installing-unified-manager-linux.adoc
+++ b/install-linux/task-installing-unified-manager-linux.adoc
@@ -42,11 +42,11 @@ a|
 a|
 MySQL 8.0.21 Community Edition
 a|
-`rpm -qa | grep -i mysql`
+`rpm -qa` | `grep -i mysql`
 a|
 p7zip 16.02
 a|
-`rpm -qa | grep p7zip`
+`rpm -qa` | `grep p7zip`
 |===
 
 . If the installed version of MySQL is earlier than MySQL 8.0.21 Community Edition, enter the following command to uninstall it:``rpm -e <mysql_package_name>``
@@ -58,7 +58,7 @@ If you receive dependency errors, you must add the `--nodeps` option to uninstal
 The required `.rpm` modules for Unified Manager are unzipped to the target directory.
 
 . Verify that the following module is available in the directory: `ls *.rpm`
- ** `netapp-um<version\>.x86_64.rpm`
+ `netapp-um<version\>.x86_64.rpm`
 . Run the pre-installation script to ensure that there are no system configuration settings or any installed software that might conflict with the installation of Unified Manager: `sudo ./pre_install_check.sh`
 +
 The pre-installation script checks that the system has a valid Red Hat subscription, and that it has access to the required software repositories. If the script identifies any issues, you must fix the issues prior to installing Unified Manager.
@@ -69,7 +69,7 @@ For Red Hat Enterprise Linux 8 system, if you have internal repositories with JD
 # sudo yum --disablerepo=rhel-8-for-x86_64-appstream-rpms install  mysql-community-server
 ----
 
-. You must perform <<STEP_EFB6C72C92504ED68EFE5AE44E710D98,step 7>>_only_ if your system is not connected to the internet and you have to manually download the packages that are required for your installation. If your system has Internet access and all the required packages are available, go to <<STEP_84638F64625B460D9B39BB07971C2480,step 8>>. For systems that are not connected to the Internet or that are not using the Red Hat Enterprise Linux repositories, perform the following steps to determine whether you are missing any required packages, and then download those packages:
+. You must perform step 7 _only_ if your system is not connected to the internet and you have to manually download the packages that are required for your installation. If your system has Internet access and all the required packages are available, go to step 8. For systems that are not connected to the Internet or that are not using the Red Hat Enterprise Linux repositories, perform the following steps to determine whether you are missing any required packages, and then download those packages:
  .. On the system on which you are installing Unified Manager, view the list of available and unavailable packages: `yum install netapp-um<version\>.x86_64.rpm --assumeno`
 +
 The items in the "`Installing:`" section are the packages that are available in the current directory, and the items in the "`Installing for dependencies:`" section are the packages that are missing on your system.
@@ -116,4 +116,4 @@ Log in to Unified Manager in a web browser by using following details:
 
 == After you finish
 
-Access the web UI to change the default password of the umadmin user, and perform the initial setup of Unified Manager, as described in the xref:concept-configuring-unified-manager.adoc[Configuring Active IQ Unified Manager].
+Access the web UI to change the default password of the umadmin user, and perform the initial setup of Unified Manager, as described in the link:../config/concept-configuring-unified-manager.html[Configuring Active IQ Unified Manager].
