--- a/install-vapp/reference-protocol-and-port-requirements.adoc
+++ b/install-vapp/reference-protocol-and-port-requirements.adoc
@@ -72,10 +72,10 @@ Used to access realtime REST API-based EMS events from authenticated ONTAP syste
 
 [NOTE]
 ====
-The ports used for HTTP and HTTPS communication (ports 80 and 443) can be changed using the Unified Manager maintenance console. For more information, see the _Active IQ Unified Manager System Configuration Guide_.
+The ports used for HTTP and HTTPS communication (ports 80 and 443) can be changed using the Unified Manager maintenance console. For more information, see Configuring Active IQ Unified Manager.
 ====
 
-http://docs.netapp.com/ocum-98/topic/com.netapp.doc.onc-um-sysconfig/home.html[Active IQ Unified Manager System Configuration Guide^]
+link:../config/concept-configuring-unified-manager.html[Configuring Active IQ Unified Manager]
 
 == Connections from the Unified Manager server
 
