--- a/install-vapp/task-deploying-the-unified-manager-virtual-appliance-vapp.adoc
+++ b/install-vapp/task-deploying-the-unified-manager-virtual-appliance-vapp.adoc
@@ -104,6 +104,6 @@ The VM console displays the URL for the Unified Manager web UI.
 
 == After you finish
 
-You can access the web UI to perform the initial setup of Unified Manager, as described in the _Active IQ Unified Manager System Configuration Guide_.
+You can access the web UI to perform the initial setup of Unified Manager, as described in _Configuring Active IQ Unified Manager_.
 
-http://docs.netapp.com/ocum-98/topic/com.netapp.doc.onc-um-sysconfig/home.html[Active IQ Unified Manager System Configuration Guide^]
+link:../config/concept-configuring-unified-manager.html[Configuring Active IQ Unified Manager]
