--- a/install-windows/concept-virtual-infrastructure-or-hardware-system-requirements.adoc
+++ b/install-windows/concept-virtual-infrastructure-or-hardware-system-requirements.adoc
@@ -13,6 +13,7 @@ Installing Unified Manager on virtual infrastructure or a physical system should
 
 The following table displays the values that are recommended for memory, CPU, and disk space resources. These values have been qualified so that Unified Manager meets acceptable performance levels.
 
+[options="header"]
 |===
 | Hardware configuration| Recommended settings
 a|
@@ -40,7 +41,7 @@ Unified Manager can be installed on systems with a small amount of memory, but t
 
 Additionally, there is a limit to the number of nodes that a single instance of Unified Manager can monitor before you install a second instance of Unified Manager. For more information, see the _Best Practices Guide_.
 
-http://www.netapp.com/us/media/tr-4621.pdf[Technical Report 4621: Unified Manager Best Practices Guide]
+http://www.netapp.com/us/media/tr-4621.pdf[Technical Report 4621: Unified Manager Best Practices Guide^]
 
 Memory-page swapping negatively impacts the performance of the system and the management application. Competing for CPU resources that are unavailable because of overall host utilization can degrade performance.
 
