--- a/install-windows/reference-protocol-and-port-requirements.adoc
+++ b/install-windows/reference-protocol-and-port-requirements.adoc
@@ -17,6 +17,7 @@ In typical installations you do not have to specify port numbers when connecting
 
 The Unified Manager server uses specific protocols to access the following interfaces:
 
+[options="header"]
 |===
 | Interface| Protocol| Port| Description
 a|
@@ -79,10 +80,10 @@ Used to enable OnCommand Workflow Automation and OnCommand API Services access t
 
 [NOTE]
 ====
-The ports used for HTTP and HTTPS communication (ports 80 and 443) can be changed using the Unified Manager maintenance console. For more information, see the _Active IQ Unified Manager System Configuration Guide_.
+The ports used for HTTP and HTTPS communication (ports 80 and 443) can be changed using the Unified Manager maintenance console. For more information, see Configuring Active IQ Unified Manager.
 ====
 
-http://docs.netapp.com/ocum-98/topic/com.netapp.doc.onc-um-sysconfig/home.html[Active IQ Unified Manager System Configuration Guide]
+link:../config/concept-configuring-unified-manager.html[Configuring Active IQ Unified Manager]
 
 == Connections from the Unified Manager server
 
@@ -92,6 +93,7 @@ Depending on your environment, you can choose to modify the ports and protocols 
 
 The Unified Manager server connects using the following protocols and ports to the managed storage systems, servers, and other components:
 
+[options="header"]
 |===
 | Destination| Protocol| Port| Description
 a|
