--- a/install-windows/task-installing-unified-manager-on-windows.adoc
+++ b/install-windows/task-installing-unified-manager-on-windows.adoc
@@ -34,7 +34,7 @@ The following special characters are allowed: ~ ! @ # $ * - ? . + { }
 == Steps
 
 . Log in to Windows using the default local administrator account.
-. Log in to the NetApp Support Site, and navigate to the *Download* page for Unified Manager: https://mysupport.netapp.com/site/products/all/details/activeiq-unified-manager/downloads-tab[NetApp Support Site]
+. Log in to the NetApp Support Site, and navigate to the *Download* page for Unified Manager: https://mysupport.netapp.com/site/products/all/details/activeiq-unified-manager/downloads-tab[NetApp Support Site^]
 . Select the required version of Unified Manager and accept the end-users license agreement (EULA).
 . Download the Unified Manager Windows installation file to a target directory on the Windows system.
 . Navigate to the directory where the installation file is located.
@@ -75,4 +75,4 @@ This is the directory where all the application-generated data is stored. This i
 
 == After you finish
 
-You can access the web UI to perform the initial setup of Unified Manager, as described in the http://docs.netapp.com/ocum-98/topic/com.netapp.doc.onc-um-sysconfig/home.html[Active IQ Unified Manager System Configuration Guide].
+You can access the web UI to perform the initial setup of Unified Manager, as described in the link:../config/concept-configuring-unified-manager.html[Configuring Active IQ Unified Manager].
