--- a/config/task-performing-the-initial-setup-of-the-unified-manager-web-ui.adoc
+++ b/config/task-performing-the-initial-setup-of-the-unified-manager-web-ui.adoc
@@ -33,10 +33,10 @@ If you want to change any of these options later, you can select your choice fro
 +
 If you need to designate a proxy to provide internet access in order to send AutoSupport content, or if you want to disable AutoSupport, use the *General* > *AutoSupport* option from the web UI.
 
-. On Red Hat and CentOS systems you can change the umadmin user password from the default "`admin`" string to a personalized string.
+. On Red Hat and CentOS systems you can change the umadmin user password from the default "admin" string to a personalized string.
 . In the *Set up API Gateway* page, select whether you want to use the API Gateway feature that allows Unified Manager to manage the ONTAP clusters you are planning to monitor using ONTAP REST APIs. Then click *Continue*.
 +
-You can enable or disable this setting later in the web UI from *General* > *Feature Settings* > *API Gateway*. For more information about the APIs, see the http://docs.netapp.com/ocum-98/topic/com.netapp.doc.onc-um-api-dev/home.html[Active IQ Unified Manager API Developer's Guide].
+You can enable or disable this setting later in the web UI from *General* > *Feature Settings* > *API Gateway*. For more information about the APIs, see link:../api-automation/concept-get-started-with-um-apis.html[Getting started with Active IQ Unified Manager REST APIs].
 
 . Add the clusters that you want Unified Manager to manage, and then click *Next*. For each cluster you plan to manage, you must have the host name or cluster management IP address (IPv4 or IPv6) along with the user name and password credentials - the user must have the "`admin`" role.
 +
