--- a/config/task-accessing-the-maintenance-console.adoc
+++ b/config/task-accessing-the-maintenance-console.adoc
@@ -28,6 +28,7 @@ When installed on VMware, if you have already logged in as the maintenance user 
 
 . Follow these steps to access the maintenance console:
 +
+[options="header"]
 |===
 | On this operating system...| Follow these steps...
 a|
@@ -56,7 +57,3 @@ a|
 +
 |===
 The Unified Manager maintenance console menu is displayed.
-
-*Related information*
-
-xref:task-using-the-maintenance-console.adoc[Using the maintenance console]
