--- a/config/task-adding-space-to-the-data-directory-of-the-unified-manager-red-hat-enterprise-linux-host.adoc
+++ b/config/task-adding-space-to-the-data-directory-of-the-unified-manager-red-hat-enterprise-linux-host.adoc
@@ -30,10 +30,10 @@ We recommend that you back up the Unified Manager database before increasing the
 +
 [cols=4*]
 |===
-| Get the SE Linux type for folders on existing `/opt/netapp/data` folder: ``se_type=``ls -Z /opt/netapp/data
+| Get the SE Linux type for folders on existing `/opt/netapp/data` folder: `se_type=`ls -Z /opt/netapp/data
 | awk '{print $4}'
 | awk -F: '{print $3}'
-| head -1``
+| head -1`
 |===
 +
 The system returns a confirmation similar to the following:
@@ -68,7 +68,7 @@ drwxr-xr-x.  17 mysql root  4096 Aug 28 13:08 data
 
 +
 The system returns a confirmation similar to the following:
-+
+
 ----
 -rw-r--r--. root root unconfined_u:object_r:mysqld_db_t:s0 /opt/netapp/data/abc
 ----
