--- a/config/task-enabling-and-disabling-policy-based-storage-management.adoc
+++ b/config/task-enabling-and-disabling-policy-based-storage-management.adoc
@@ -21,6 +21,7 @@ This option is enabled by default, but you can disable it if you do not want to 
 
 When enabled, this option provides many new items in the user interface:
 
+[options="header"]
 |===
 | New Content| Location
 a|
@@ -47,6 +48,7 @@ See the online help in the product for more information on these pages and on th
 . In the left navigation pane, click *General* > *Feature Settings*.
 . In the *Feature Settings* page, disable or enable policy-based storage management by choosing one of the following options:
 +
+[options="header"]
 |===
 | If you want to...| Then do this...
 a|
