--- a/config/task-setting-the-session-inactivity-timeout.adoc
+++ b/config/task-setting-the-session-inactivity-timeout.adoc
@@ -29,6 +29,7 @@ This option is not available if you have enabled Security Assertion Markup Langu
 . In the left navigation pane, click *General* > *Feature Settings*.
 . In the *Feature Settings* page, specify the inactivity timeout by choosing one of the following options:
 +
+[options="header"]
 |===
 | If you want to...| Then do this...
 a|
