--- a/config/task-subscribing-to-ontap-ems-events.adoc
+++ b/config/task-subscribing-to-ontap-ems-events.adoc
@@ -19,7 +19,7 @@ Do not subscribe to EMS events that are already added to Unified Manager automat
 
 You can subscribe to any number of EMS events. All the events to which you subscribe are validated, and only the validated events are applied to the clusters you are monitoring in Unified Manager. The _ONTAP 9 EMS Event Catalog_ provides detailed information for all of the EMS messages for the specified version of ONTAP 9 software. Locate the appropriate version of the _EMS Event Catalog_ from the ONTAP 9 Product Documentation page for a list of the applicable events.
 
-https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=62286[ONTAP 9 Product Library]
+https://mysupport.netapp.com/documentation/productlibrary/index.html?productID=62286[ONTAP 9 Product Library^]
 
 You can configure alerts for the ONTAP EMS events to which you subscribe, and you can create custom scripts to be executed for these events.
 
@@ -36,7 +36,7 @@ If you do not receive the ONTAP EMS events to which you have subscribed, there m
 +
 To view the names of the EMS events to which you can subscribe, from the ONTAP cluster shell, you can use the `event route show` command (prior to ONTAP 9) or the `event catalog show` command (ONTAP 9 or later).
 +
-https://kb.netapp.com/Advice_and_Troubleshooting/Data_Infrastructure_Management/OnCommand_Suite/How_to_configure_ONTAP_EMS_Event_Subscriptions_in_OnCommand_Unified_Manager_%2F%2F_Active_IQ_Unified_Manager[How to configure ONTAP EMS Event Subscriptions in OnCommand Unified Manager / Active IQ Unified Manager]
+https://kb.netapp.com/Advice_and_Troubleshooting/Data_Infrastructure_Management/OnCommand_Suite/How_to_configure_ONTAP_EMS_Event_Subscriptions_in_OnCommand_Unified_Manager_%2F%2F_Active_IQ_Unified_Manager[How to configure ONTAP EMS Event Subscriptions in OnCommand Unified Manager / Active IQ Unified Manager^]
 
 . Click *Add*.
 +
