--- a/performance-checker/reference-performance-data-that-can-be-sent-to-an-external-server.adoc
+++ b/performance-checker/reference-performance-data-that-can-be-sent-to-an-external-server.adoc
@@ -13,6 +13,7 @@ Unified Manager collects a variety of performance data from all the clusters tha
 
 Depending on the performance data that you want to chart, you can choose to send one of the following groups of statistics:
 
+[options="header"]
 |===
 | Statistics group| Data included| Details
 a|
@@ -70,4 +71,4 @@ If the name of a cluster, or cluster object, is changed on the storage system, b
 
 See Knowledge Base article 30096 for the list of all performance counters that can be sent to an external data provider.
 
-https://kb.netapp.com/?title=Advice_and_Troubleshooting%2FData_Infrastructure_Management%2FActive_IQ_Unified_Manager%2FWhat_are_the_ActiveIQ_Unified_Manager_performance_counters_that_can_be_exported_to_an_External_Data_Provider%253F[Unified Manager performance counters that can be exported to an External Data Provider]
+https://kb.netapp.com/?title=Advice_and_Troubleshooting%2FData_Infrastructure_Management%2FActive_IQ_Unified_Manager%2FWhat_are_the_ActiveIQ_Unified_Manager_performance_counters_that_can_be_exported_to_an_External_Data_Provider%253F[Unified Manager performance counters that can be exported to an External Data Provider^]
