--- a/health-checker/concept-managing-backup-and-restore-operations.adoc
+++ b/health-checker/concept-managing-backup-and-restore-operations.adoc
@@ -13,6 +13,7 @@ You can create backups of Unified Manager and use the restore feature to restore
 
 There are three backup and restore methods depending on the operating system on which you have installed Unified Manager, and based on the number of clusters and nodes being managed:
 
+[options="header"]
 |===
 | Operating System| Size of Deployment| Recommended Backup Method
 a|
