--- a/reporting/task-searching-for-a-scheduled-report.adoc
+++ b/reporting/task-searching-for-a-scheduled-report.adoc
@@ -16,6 +16,7 @@ You can search for scheduled reports by name, view name, object type, or recipie
 . In the left navigation pane, click *Storage Management* > *Report Schedules*.
 . Use the *Search Scheduled Reports* text field.
 +
+[options="header"]
 |===
 | To find reports by ...| Try ...
 a|
