--- a/api-automation/concept-api-logs.adoc
+++ b/api-automation/concept-api-logs.adoc
@@ -13,6 +13,7 @@ System logs enable you to analyze the causes of failure and troubleshooting issu
 
 Retrieve the logs from the following location for troubleshooting issues related to the API calls.
 
+[options="header"]
 |===
 | Log location| Use
 a|
