--- a/api-automation/concept-events-workflows.adoc
+++ b/api-automation/concept-events-workflows.adoc
@@ -18,8 +18,9 @@ image::../media/handling-event-related-issues-of-a-storage-object-flowchart.gif[
 Follow these steps to determine the issues in your volume before taking remedial steps.
 
 . Analyze the critical Active IQ Unified Manager events notifications for the volumes in your data center.
-. Query all the events for the volumes by using the following parameters in the `/management-server/events` API: `"resource_type": "volume"``"severity": "critical"`
+. Query all the events for the volumes by using the following parameters in the `/management-server/events` API: `"resource_type": "volume" "severity": "critical"`
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -27,8 +28,8 @@ management-server
 a|
 GET
 a|
-    `/management-server/events`
-+
+`/management-server/events`
+
 |===
 
 . View the output and analyze the issues in the specific volumes.
