--- a/api-automation/concept-modifying-workloads-workflow.adoc
+++ b/api-automation/concept-modifying-workloads-workflow.adoc
@@ -38,6 +38,7 @@ This procedure describes adding a Performance Service Level to a file share. You
 
 . Obtain the CIFS share or NFS file share key of the file share that you want to update. This API queries all the file shares on your data center. Skip this step if you already know the file share key.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -45,12 +46,13 @@ storage-provider
 a|
 GET
 a|
-    `/storage-provider/file-shares`
-+
+`/storage-provider/file-shares`
+
 |===
 
 . View the details of the file share by running the following API with the file share key that you obtained.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -58,8 +60,8 @@ storage-provider
 a|
 GET
 a|
-    `+/storage-provider/file-shares/{key}+`
-+
+`+/storage-provider/file-shares/{key}+`
+
 |===
 View the details of the file share in the output.
 +
@@ -75,6 +77,7 @@ View the details of the file share in the output.
 
 . Obtain the key for the Performance Service Level that you want to assign on this file share. Currently no policy is assigned to it.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -92,6 +95,7 @@ You can retrieve the details of the system-defined Performance Service Levels by
 
 . Apply the Performance Service Level on the file share.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -116,6 +120,7 @@ The JSON output displays a Job object that you can use to verify the whether the
 
 . Verify whether the Performance Service Level has been added to the file share by using the Job object key displayed in your output.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -127,6 +132,7 @@ a|
 |===
 If you query by the ID of the Job object, you see whether the file share is updated successfully. In case of a failure, troubleshoot the failure and run the API again. On successful creation, query the file share to see the modified object:
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -134,8 +140,8 @@ storage-provider
 a|
 GET
 a|
-    `+/storage-provider/file-shares/{key}+`
-+
+`+/storage-provider/file-shares/{key}+`
+
 |===
 View the details of the file share in the output.
 +
@@ -171,6 +177,7 @@ This procedure describes adding a Performance Service Level to a LUN. You can us
 
 . Obtain the LUN key of the LUN that you want to update. This API returns details of all the LUNS in your data center. Skip this step if you already know the LUN key.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -183,6 +190,7 @@ a|
 
 . View the details of the LUN by running the following API with the LUN key that you obtained.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -209,6 +217,7 @@ View the details of the LUN in the output. You can see that there is no Performa
 
 . Obtain the key for the Performance Service Level that you want to assign to the LUN.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -226,6 +235,7 @@ You can retrieve the details of the system-defined Performance Service Levels by
 
 . Apply the Performance Service Level on the LUN.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -248,6 +258,7 @@ The JSON output displays a Job object key that you can use to verify the LUN tha
 
 . View the details of the LUN by running the following API with the LUN key that you obtained.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
