--- a/api-automation/concept-workflow-space-issue.adoc
+++ b/api-automation/concept-workflow-space-issue.adoc
@@ -23,6 +23,7 @@ This flow assumes that the clusters have already been created in ONTAP and added
 
 . Obtain the cluster key, unless you know the value:
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -30,12 +31,13 @@ datacenter
 a|
 GET
 a|
-    `/datacenter/cluster/clusters`
-+
+`/datacenter/cluster/clusters`
+
 |===
 
 . Using the cluster key as the filter parameter, query the aggregates on that cluster.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -43,13 +45,14 @@ datacenter
 a|
 GET
 a|
-    `/datacenter/storage/aggregates`
-+
+`/datacenter/storage/aggregates`
+
 |===
 
 . From the response, analyze the space usage of the aggregates and determine which aggregates have space issues. For each aggregate with space issue, obtain the aggregate key from the same JSON output.
 . Using each aggregate key, filter all the volumes that have the value for the `autosize.mode` parameter as `grow`.
 +
+[options="header"]
 |===
 | Category| HTTP verb| Path
 a|
@@ -57,8 +60,8 @@ datacenter
 a|
 GET
 a|
-    `/datacenter/storage/volumes`
-+
+`/datacenter/storage/volumes`
+
 |===
 
 . Analyze which volumes are being over-utilized.
