--- a/legal-notices.adoc
+++ b/legal-notices.adoc
@@ -15,4 +15,7 @@ include::https://raw.githubusercontent.com/NetAppDocs/common/main/_include/commo
 include::https://raw.githubusercontent.com/NetAppDocs/common/main/_include/open-source-notice-intro.adoc[]
 
 // Add required link(s)
-https://library.netapp.com/ecm/ecm_download_file/ECMP12475945[Notice for disk shelves]
+== Open source
+Information about third-party copyright and licenses used in this product.
+
+https://library.netapp.com/ecm/ecm_download_file/ECMLP2874357[Notice for Active IQ Unified Manager 9.8]
