--- a/online-help/reference-aggregate-events.adoc
+++ b/online-help/reference-aggregate-events.adoc
@@ -15,10 +15,9 @@ Aggregate events provide you with information about the status of aggregates so 
 
 An asterisk (*) identifies EMS events that have been converted to Unified Manager events.
 
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Aggregate Offline(ocumEvtAggregateStateOffline)
 
@@ -122,10 +121,9 @@ Error
 
 == Impact area: capacity
 
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Aggregate Space Nearly Full(ocumEvtAggregateNearlyFull)
 
@@ -193,10 +191,9 @@ Warning
 
 == Impact area: configuration
 
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Aggregate Discovered(Not applicable)
 
@@ -228,10 +225,9 @@ Information
 
 == Impact area: performance
 
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Aggregate IOPS Critical Threshold Breached(ocumAggregateIopsIncident)
 
