--- a/online-help/reference-flash-card-events.adoc
+++ b/online-help/reference-flash-card-events.adoc
@@ -12,11 +12,9 @@ summary: 'Flash card events provide you with information about the status of the
 Flash card events provide you with information about the status of the flash cards installed on nodes in your data center so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: availability
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Flash Cards Offline(ocumEvtFlashCardOffline)
 
