--- a/online-help/reference-inodes-events.adoc
+++ b/online-help/reference-inodes-events.adoc
@@ -12,11 +12,9 @@ summary: 'Inode events provide information when the inode is full or nearly full
 Inode events provide information when the inode is full or nearly full so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: capacity
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Inodes Nearly Full(ocumEvtInodesAlmostFull)
 
