--- a/online-help/reference-lun-events.adoc
+++ b/online-help/reference-lun-events.adoc
@@ -14,11 +14,9 @@ LUN events provide you with information about the status of your LUNs, so that y
 == Impact area: availability
 
 An asterisk (*) identifies EMS events that have been converted to Unified Manager events.
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 LUN Offline(ocumEvtLunOffline)
 
@@ -94,11 +92,9 @@ Error
 |===
 
 == Impact area: capacity
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Insufficient Space For LUN Snapshot Copy(ocumEvtLunSnapshotNotPossible)
 
@@ -111,11 +107,9 @@ Warning
 |===
 
 == Impact area: configuration
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)[options="header"]| Impact level| Source type| Severity
 a|
 LUN mapped with unsupported operating system in igroup(igroupUnsupportedOsType)
 
@@ -128,11 +122,9 @@ Warning
 |===
 
 == Impact area: performance
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 LUN IOPS Critical Threshold Breached(ocumLunIopsIncident)
 
