--- a/online-help/reference-metrocluster-bridge-events.adoc
+++ b/online-help/reference-metrocluster-bridge-events.adoc
@@ -12,11 +12,9 @@ summary: 'MetroCluster Bridge events provide you with information about the stat
 MetroCluster Bridge events provide you with information about the status of the bridges so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: availability
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Bridge Unreachable(ocumEvtBridgeUnreachable)
 
