--- a/online-help/reference-metrocluster-switch-events.adoc
+++ b/online-help/reference-metrocluster-switch-events.adoc
@@ -12,11 +12,9 @@ summary: 'MetroCluster switch events provide you with information about the stat
 MetroCluster switch events provide you with information about the status of the MetroCluster switches so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: availability
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Switch Temperature Abnormal(ocumEvtSwitchTemperatureAbnormal)
 
