--- a/online-help/reference-nvme-namespace-events.adoc
+++ b/online-help/reference-nvme-namespace-events.adoc
@@ -14,11 +14,9 @@ NVMe Namespace events provide you with information about the status of your name
 An asterisk (*) identifies EMS events that have been converted to Unified Manager events.
 
 == Impact area: availability
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 NVMeNS Offline *(nvmeNamespaceStatusOffline)
 
@@ -58,11 +56,9 @@ Information
 |===
 
 == Impact area: performance
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 NVMe Namespace IOPS Critical Threshold Breached(ocumNvmeNamespaceIopsIncident)
 
