--- a/online-help/reference-port-events.adoc
+++ b/online-help/reference-port-events.adoc
@@ -12,11 +12,9 @@ summary: 'Port events provide you with status about cluster ports so that you ca
 Port events provide you with status about cluster ports so that you can monitor changes or problems on the port, like whether the port is down.
 
 == Impact area: availability
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Port Status Down(ocumEvtPortStatusDown)
 
@@ -29,11 +27,9 @@ Critical
 |===
 
 == Impact area: performance
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Network Port MB/s Critical Threshold Breached(ocumNetworkPortMbpsIncident)
 
