--- a/online-help/reference-qtree-events.adoc
+++ b/online-help/reference-qtree-events.adoc
@@ -12,11 +12,9 @@ summary: 'Qtree events provide you with information about the qtree capacity and
 Qtree events provide you with information about the qtree capacity and the file and disk limits so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: capacity
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Qtree Space Nearly Full(ocumEvtQtreeSpaceNearlyFull)
 
