--- a/online-help/reference-service-processor-events.adoc
+++ b/online-help/reference-service-processor-events.adoc
@@ -12,11 +12,9 @@ summary: 'Service processor events provide you with information about the status
 Service processor events provide you with information about the status of your processor so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: availability
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Service Processor Not Configured(ocumEvtServiceProcessorNotConfigured)
 
