--- a/online-help/reference-snapmirror-and-vault-relationship-events.adoc
+++ b/online-help/reference-snapmirror-and-vault-relationship-events.adoc
@@ -12,11 +12,9 @@ summary: 'SnapMirror and Vault relationship events provide you with information 
 SnapMirror and Vault relationship events provide you with information about the status of your Asynchronous SnapMirror and Vault relationships so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: protection
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Asynchronous Mirror and Vault Unhealthy(ocumEvtMirrorVaultRelationshipUnhealthy)
 
