--- a/online-help/reference-snapmirror-relationship-events.adoc
+++ b/online-help/reference-snapmirror-relationship-events.adoc
@@ -14,11 +14,9 @@ SnapMirror relationship events provide you with information about the status of 
 == Impact area: protection
 
 An asterisk (*) identifies EMS events that have been converted to Unified Manager events.
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Mirror Replication Unhealthy(ocumEvtSnapmirrorRelationshipUnhealthy)
 
