--- a/online-help/reference-snapshot-events.adoc
+++ b/online-help/reference-snapshot-events.adoc
@@ -12,11 +12,9 @@ summary: 'Snapshot events provide information about the status of snapshots whic
 Snapshot events provide information about the status of snapshots which enables you to monitor the snapshots for potential problems. The events are grouped by impact area, and include the event name, trap name, impact level, source type, and severity.
 
 == Impact area: availability
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Snapshot Auto-delete Disabled(Not applicable)
 
