--- a/online-help/reference-snapvault-relationship-events.adoc
+++ b/online-help/reference-snapvault-relationship-events.adoc
@@ -12,11 +12,9 @@ summary: 'SnapVault relationship events provide you with information about the s
 SnapVault relationship events provide you with information about the status of your SnapVault relationships so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: protection
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Asynchronous Vault Unhealthy(ocumEvtSnapVaultRelationshipUnhealthy)
 
