--- a/online-help/reference-storage-shelf-events.adoc
+++ b/online-help/reference-storage-shelf-events.adoc
@@ -12,11 +12,9 @@ summary: 'Storage shelf events tell you if your storage shelf has abnormal so th
 Storage shelf events tell you if your storage shelf has abnormal so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: availability
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Abnormal Voltage Range(ocumEvtShelfVoltageAbnormal)
 
