--- a/online-help/reference-volume-move-status-events.adoc
+++ b/online-help/reference-volume-move-status-events.adoc
@@ -12,11 +12,9 @@ summary: 'Volume move status events tell you about the status of your volume mov
 Volume move status events tell you about the status of your volume move so that you can monitor for potential problems. Events are grouped by impact area and include the event and trap name, impact level, source type, and severity.
 
 == Impact area: capacity
-
+[options="header"]
 |===
-| Event name(Trap name)
-
-| Impact level| Source type| Severity
+| Event name(Trap name)| Impact level| Source type| Severity
 a|
 Volume Move Status: In Progress(Not applicable)
 
