--- a/online-help/task-acknowledging-and-resolving-events.adoc
+++ b/online-help/task-acknowledging-and-resolving-events.adoc
@@ -29,6 +29,7 @@ You cannot acknowledge Information events.
 . In the left navigation pane, click *Event Management*.
 . From the events list, perform the following actions to acknowledge the events:
 +
+[options="header"]
 |===
 | If you want to...| Do this...
 a|
