--- a/online-help/task-exporting-storage-data-as-reports.adoc
+++ b/online-help/task-exporting-storage-data-as-reports.adoc
@@ -19,6 +19,7 @@ You can export data to a `.csv` file, `.xlsx` file, or `.pdf` document from the 
 
 . Perform one of the following actions:
 +
+[options="header"]
 |===
 | If you want to export...| Do this...
 a|
