--- a/online-help/task-filtering-inventory-page-content.adoc
+++ b/online-help/task-filtering-inventory-page-content.adoc
@@ -17,6 +17,7 @@ Use *Filtering* to customize the grid view based on your preferences. Available 
 
 Three types of filter parameters are supported.
 
+[options="header"]
 |===
 | Parameter| Validation
 a|
