--- a/online-help/task-adding-scripts.adoc
+++ b/online-help/task-adding-scripts.adoc
@@ -16,6 +16,7 @@ You can add scripts in Unified Manager, and associate the scripts with alerts. T
 * You must have created and saved the scripts that you want to add to the Unified Manager server.
 * The supported file formats for scripts are Perl, Shell, PowerShell, and `.bat` files.
 +
+[options="header"]
 |===
 | Platform on which Unified Manager is installed| Supported languages
 a|
