--- a/online-help/concept-guidelines-for-adding-alerts.adoc
+++ b/online-help/concept-guidelines-for-adding-alerts.adoc
@@ -21,7 +21,7 @@ You should provide a description for the alert so that it helps you track your a
 +
 You should decide which physical or logical resource requires an alert. You can include and exclude resources, as required. For example, if you want to closely monitor your aggregates by configuring an alert, you must select the required aggregates from the list of resources.
 +
-If you select a category of resources, for example, *<<All User or Group Quotas>>*, then you will receive alerts for all objects in that category.
+If you select a category of resources, for example, *+<<All User or Group Quotas>>+*, then you will receive alerts for all objects in that category.
 +
 [NOTE]
 ====
