--- a/online-help/concept-unified-manager-databases-accessible-for-reporting.adoc
+++ b/online-help/concept-unified-manager-databases-accessible-for-reporting.adoc
@@ -13,6 +13,7 @@ Unified Manager uses a MySQL database to store data from the clusters that it is
 
 All table data from the following databases are available:
 
+[options="header"]
 |===
 | Database| Description
 a|
