--- a/online-help/reference-backup-settings-dialog-box.adoc
+++ b/online-help/reference-backup-settings-dialog-box.adoc
@@ -19,6 +19,7 @@ When you are using the MySQL database dump backup method, this field specifies t
 +
 The following table specifies the backup path format, and default locations, for different operating systems:
 +
+[options="header"]
 |===
 | Host operating system| Backup path format
 a|
