--- a/online-help/reference-volume-health-fields.adoc
+++ b/online-help/reference-volume-health-fields.adoc
@@ -154,6 +154,7 @@ The tiering policy set on the volume. The policy takes affect only when the volu
 +
 The caching policy that is associated with the selected volume. The policy provides information about how the Flash Pool caching occurs for the volume.
 +
+[options="header"]
 |===
 | Cache policy| Description
 a|
