--- a/online-help/task-adding-annotations-manually-to-individual-storage-objects.adoc
+++ b/online-help/task-adding-annotations-manually-to-individual-storage-objects.adoc
@@ -19,6 +19,7 @@ You must have the Application Administrator or Storage Administrator role.
 
 . Navigate to the storage objects you want to annotate:
 +
+[options="header"]
 |===
 | To add annotation to...| Do this...
 a|
