--- a/online-help/task-adding-authentication-servers.adoc
+++ b/online-help/task-adding-authentication-servers.adoc
@@ -28,6 +28,7 @@ If the authentication server that you are adding is part of a high-availability 
 . In the left navigation pane, click *General* > *Remote Authentication*.
 . Enable or disable the *Use secure connection* option:
 +
+[options="header"]
 |===
 | If you want to...| Then do this...
 a|
