--- a/online-help/task-assigning-performance-threshold-policies-to-storage-objects.adoc
+++ b/online-help/task-assigning-performance-threshold-policies-to-storage-objects.adoc
@@ -31,6 +31,7 @@ You can assign a maximum of three threshold policies to each storage object. Whe
 
 . From the Performance inventory page of any storage object, select the object or objects to which you want to assign a threshold policy:
 +
+[options="header"]
 |===
 | To assign thresholds to...| Click...
 a|
