--- a/online-help/task-changing-the-local-user-password.adoc
+++ b/online-help/task-changing-the-local-user-password.adoc
@@ -17,7 +17,7 @@ You must be logged in as a local user.
 
 == About this task
 
-The passwords for the maintenance user and for remote users cannot be changed using these steps. To change a remote user password, contact your password administrator. To change the maintenance user password, see the chapter on "`Using the maintenance console`" in the http://docs.netapp.com/ocum-98/topic/com.netapp.doc.onc-um-sysconfig/home.html[Active IQ Unified Manager System Configuration Guide].
+The passwords for the maintenance user and for remote users cannot be changed using these steps. To change a remote user password, contact your password administrator. To change the maintenance user password, see the chapter on "`Using the maintenance console`" in the link:../config/concept-configuring-unified-manager.html[Configuring Active IQ Unified Manager].
 
 == Steps
 
