--- a/online-help/task-creating-and-editing-psls.adoc
+++ b/online-help/task-creating-and-editing-psls.adoc
@@ -32,6 +32,7 @@ You cannot modify a Performance Service Level if it is currently assigned to a w
 . In the left navigation pane under *Settings*, select *Policies* > *Performance Service Levels*.
 . In the *Performance Service Levels* page, click the appropriate button depending on whether you want to create a new Performance Service Level or if you want to edit an existing Performance Service Level.
 +
+[options="header"]
 |===
 | To...| Follow these steps...
 a|
