--- a/online-help/task-enabling-and-disabling-the-ability-to-upload-scripts.adoc
+++ b/online-help/task-enabling-and-disabling-the-ability-to-upload-scripts.adoc
@@ -20,6 +20,7 @@ You must have the Application Administrator role.
 . In the left navigation pane, click *General* > *Feature Settings*.
 . In the *Feature Settings* page, disable or enable scripting by choosing one of the following options:
 +
+[options="header"]
 |===
 | If you want to...| Then do this...
 a|
