--- a/online-help/task-setting-up-authentication-services.adoc
+++ b/online-help/task-setting-up-authentication-services.adoc
@@ -21,6 +21,7 @@ Authentication services enable the authentication of remote users or remote grou
 . In the left navigation pane, click *General* > *Remote Authentication*.
 . Select one of the following authentication services:
 +
+[options="header"]
 |===
 | If you select...| Then do this...
 a|
