--- a/online-help/task-viewing-fabricpool-capacity-information.adoc
+++ b/online-help/task-viewing-fabricpool-capacity-information.adoc
@@ -21,6 +21,7 @@ When a cloud tier is mirrored to another cloud provider (the "`mirror tier`") th
 
 . Perform one of the following:
 +
+[options="header"]
 |===
 | To view capacity information for...| Do this...
 a|
