--- a/online-help/task-viewing-the-node-list-and-details.adoc
+++ b/online-help/task-viewing-the-node-list-and-details.adoc
@@ -28,6 +28,7 @@ The detailed information for the selected node is displayed in the Cluster / Hea
 
 . To view other details about the node, perform the appropriate action:
 +
+[options="header"]
 |===
 | To view...| Click...
 a|
