--- a/install-linux/task-changing-the-jboss-password.adoc
+++ b/install-linux/task-changing-the-jboss-password.adoc
@@ -19,7 +19,11 @@ You can reset the instance-specific JBoss password that is set during installati
 == Steps
 
 . Log in as root user on the system.
-. Stop the Unified Manager services by entering the following commands in the order shown: `systemctl stop ocieau``systemctl stop ocie`
+. Stop the Unified Manager services by entering the following commands in the order shown: 
++
+`systemctl stop ocieau`
++
+`systemctl stop ocie`
 +
 Do not stop the associated MySQL software.
 
@@ -28,5 +32,9 @@ Do not stop the associated MySQL software.
 +
 Note that the password should be between 8 and 16 characters, and must contain at least a digit, an upper case and lower case characters, and at least one of these special characters: `+!@%^*-_+=[]:<>.?/~+`
 
-. When the script completes, start the Unified Manager services by entering the following commands in the order shown: `systemctl start ocie``systemctl start ocieau`
+. When the script completes, start the Unified Manager services by entering the following commands in the order shown: +
++
+`systemctl start ocie`
++
+`systemctl start ocieau`
 . After all of the services are started, you can log in to the Unified Manager UI.
