--- a/reporting/concept-reporting-access-points.adoc
+++ b/reporting/concept-reporting-access-points.adoc
@@ -11,7 +11,7 @@ summary: 'You can gather information in Unified Manager about your clusters to c
 [.lead]
 You can gather information in Unified Manager about your clusters to create reports from the UI, MySQL database queries, and REST APIs.
 
-This guide covers Unified Manager reporting and scheduling through the UI.
+This section covers Unified Manager reporting and scheduling through the UI.
 
 There are three ways you can access the reporting capabilities provided by Unified Manager:
 
@@ -19,10 +19,4 @@ There are three ways you can access the reporting capabilities provided by Unifi
 * Using Open Database Connectivity (ODBC) and ODBC tools to access all the available objects.
 * Executing Unified Manager REST APIs to return the information that you want to review.
 
-This guide covers Unified Manager reporting and scheduling through the UI.
-
-*Related information*
-
-xref:generaltask-um-rest-apis-that-can-be-used-for-reporting.adoc[Unified Manager REST APIs that can be used for reporting]
-
-xref:concept-unified-manager-databases-accessible-for-reporting.adoc[Unified Manager databases accessible for custom reporting]
+This section covers Unified Manager reporting and scheduling through the UI.
