--- a/api-automation/reference-intended-audience-for-this-guide.adoc
+++ b/api-automation/reference-intended-audience-for-this-guide.adoc
@@ -4,7 +4,7 @@ sidebar: sidebar
 keywords: 
 summary: 'The topics here are intended for developers creating applications that interface with the Active IQ Unified Manager software through REST APIs.'
 ---
-= Audience for this guide
+= Audience for this content
 :icons: font
 :imagesdir: ../media/
 
