--- a/index.adoc
+++ b/index.adoc
@@ -6,7 +6,7 @@ lead: Active IQ Unified Manager (Unified Manager, and formerly OnCommand Unified
 summary: Fix this too.
 ---
 
-= Active IQ Unified Manager 9.8 Documentation
+= Active IQ Unified Manager Documentation
 :hardbreaks:
 :nofooter:
 :icons: font
