--- a/install-windows/task-restarting-unified-manager-win.adoc
+++ b/install-windows/task-restarting-unified-manager-win.adoc
@@ -42,6 +42,7 @@ a|
 
 . Start the Unified Manager services:
 +
+[options="header"]
 |===
 | From the...| Start the services in following order...
 a|
