--- a/online-help/concept-managing-performance-service-levels.adoc
+++ b/online-help/concept-managing-performance-service-levels.adoc
@@ -85,7 +85,7 @@ https://kb.netapp.com/Advice_and_Troubleshooting/Data_Infrastructure_Management/
 Note that if workloads exceed the expected latency value for 30% of the time during the previous hour, Unified Manager will generate one of the following events to notify you of a potential performance issue: "`Workload Volume Latency Threshold Breached as defined by Performance Service Level Policy`" or "`Workload LUN Latency Threshold Breached as defined by Performance Service Level Policy`". You may want to analyze the workload to see what may be causing the higher latency values.
 
 The following table provides information about the system-defined PSLs:
-
+[options="header"]
 |===
 | Performance Service Level| Description and use case| Expected latency (ms/op)| Peak IOPS| Expected IOPS| Absolute minimum IOPS
 a|
