--- a/online-help/task-excluding-disaster-recovery-destination-volumes-from-generating-alerts.adoc
+++ b/online-help/task-excluding-disaster-recovery-destination-volumes-from-generating-alerts.adoc
@@ -19,7 +19,7 @@ You must have the Application Administrator or Storage Administrator role.
 
 You can disable alerts for disaster recovery destination volumes by excluding volumes that have the name of the destination SVM. This is possible because the identifier for volume events contains both the SVM name and volume name in the format "`<svm_name>:/<volume_name>`".
 
-The example below shows how to create alerts for volume "`vol1`" on the primary SVM"`vs1`", but exclude the alert from being generated on a volume with the same name on SVM"`vs1-dr`".
+The example below shows how to create alerts for volume "`vol1`" on the primary SVM"vs1", but exclude the alert from being generated on a volume with the same name on SVM"vs1-dr".
 
 Perform the following steps in the Add Alert dialog box:
 
@@ -31,7 +31,7 @@ Perform the following steps in the Add Alert dialog box:
  .. Select *\<<All Volumes whose name contains 'vol1'>>* from the *Available Resources* area, and move it to the *Selected Resources* area.
 . Select the *Exclude* tab, select *Volume*, enter `vs1-dr` in the *Name contains* field, and then click *Add*.
 +
-This excludes the alert from being generated for volume "`vol1`" on SVM"`vs1-dr`".
+This excludes the alert from being generated for volume "`vol1`" on SVM"vs1-dr".
 
 . Click *Events* and select the event or events that you want to apply to the volume or volumes.
 . Click *Actions* and then select the name of the user who will receive the alert email in the *Alert these users* field.
